<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#5fb0c9"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/firsttextView"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />



    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/adminusername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#e40a53"
                    android:singleLine="true"
                    android:hint="@string/adminhing"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressbarid"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/adminpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/pass"
                    android:drawableTint="#FF4081"
                    android:hint="@string/passwordhint"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/loginbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:background="#d67601"
                android:text="@string/button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

            <Button
                android:id="@+id/seebillbutton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="13dp"
                android:background="#d67601"
                android:text="@string/buttonforcommon"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />
            <TextView
                android:layout_margin="13dp"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp"
                android:background="#d67601"
                android:text="@string/help"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </RelativeLayout>


</RelativeLayout>