<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInformationFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userusernameid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#e40a53"
                    android:singleLine="true"
                    android:hint="@string/userhint"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userfathernameid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#FF4081"
                    android:hint="@string/userfathername"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressbarid20"
                android:layout_width="100dp"
                android:layout_height="100dp" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/uservillageid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/home"
                    android:drawableTint="#FF4081"
                    android:hint="@string/uservillage"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/giveinfobtnid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="#d67601"
                android:text="@string/button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>