<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserBillFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="70dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userbillusernameid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#e40a53"
                    android:singleLine="true"
                    android:hint="@string/username"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userbilluserfathernameid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#e40a53"
                    android:singleLine="true"
                    android:hint="@string/userfathername"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/monthlychargeid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/currency"
                    android:drawableTint="#e40a53"
                    android:singleLine="true"
                    android:hint="@string/monthlycharge"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/givenamountid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:singleLine="true"
                    android:drawableLeft="@drawable/currency"
                    android:drawableTint="#FF4081"
                    android:hint="@string/givenamoutn"
                    android:inputType="number" />
            </android.support.design.widget.TextInputLayout>
            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressbarid10"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Spinner
                android:outlineAmbientShadowColor="#d67601"
                android:outlineSpotShadowColor="#d67601"
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <Spinner
                android:outlineAmbientShadowColor="#d67601"
                android:outlineSpotShadowColor="#d67601"
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>



            <Button
                android:id="@+id/uploadbillid"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="22dp"
                android:background="#d67601"
                android:text="@string/button"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />

        </LinearLayout>
    </RelativeLayout>

</FrameLayout>