<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5fb0c9"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="22dp"
        android:gravity="center_horizontal"
        android:text="@string/userinfotext"
        android:textColor="#fff"
        android:textSize="26sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_title"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="#fff"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/showforusernameid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#e40a53"
                    android:singleLine="true"
                    android:hint="@string/userhint"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center"
                android:id="@+id/progressbarid1"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/showforuserfathernameid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user"
                    android:drawableTint="#e40a53"
                    android:singleLine="true"
                    android:hint="@string/userfathername"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:outlineAmbientShadowColor="#d67601"
                android:outlineSpotShadowColor="#d67601"
                android:id="@+id/spinner3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>

            <Spinner
                android:outlineAmbientShadowColor="#d67601"
                android:outlineSpotShadowColor="#d67601"
                android:id="@+id/spinner4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/btn_dropdown"
                android:spinnerMode="dropdown"/>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/userseebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="@string/button"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/totalbillbtnid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="22dp"
                    android:background="#d67601"
                    android:text="@string/totalbillbtn"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="18sp" />
            </LinearLayout>
            <TextView
                android:id="@+id/seeresulttxtid"
                android:layout_width="fill_parent"
                android:layout_weight="1.2"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="22dp"
                android:gravity="center_horizontal"
                android:textColor="#e21010"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>